--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@
         <h2>Poemas</h2>
 
         <p>
-            en este apartado encontraras algunos poemas escritos por <a
-                href="https://www.instagram.com/luzneibytatianaatacho/">luzneibytatianaatacho
-            </a>,
+            en este apartado encontraras algunos poemas escritos por mi compañera Luz,
             espero lo disfruten mucho y que los poemas sean de su agrado ^-^
         </p>
 
